modified jenkins file according to requirments

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,44 +1,19 @@
-pipeline {
-    agent any
+@Library('jenkins-shared-lib') _
+microservicePipeline(
+  serviceName    : 'service-a',
+  gitUrl         : 'https://github.com/VinayAlt/service-b.git',
+  gitBranch      : 'main',
 
-    environment {
-        AWS_REGION = "us-west-2"
-        ACCOUNT_ID = "784074784226"
-        ECR_REPO = "user-service"   // change for each service
-        IMAGE_TAG = "${BUILD_NUMBER}"
-    }
+  awsCredId      : 'aws-creds',
+  awsRegion      : 'ap-south-1',
+  accountId      : '784074784226',
 
-    stages {
-        stage('Checkout') {
-            steps {
-                git branch: 'main', url: 'https://github.com/your-org/user-service.git'
-            }
-        }
+  ecrRepo        : 'service-b',
+  k8sPath        : 'k8s',
+  k8sNamespace   : 'default',
+  deploymentName : 'opentelemetry-demo-frontend',
 
-        stage('Build Docker Image') {
-            steps {
-                sh 'docker build -t $ECR_REPO:$IMAGE_TAG .'
-            }
-        }
-
-        stage('Tag Image') {
-            steps {
-                sh 'docker tag $ECR_REPO:$IMAGE_TAG $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG'
-            }
-        }
-
-        stage('Push to ECR') {
-            steps {
-                sh 'aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com'
-                sh 'docker push $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG'
-            }
-        }
-
-        stage('Deploy to Kubernetes') {
-            steps {
-                sh 'kubectl set image deployment/$ECR_REPO $ECR_REPO=$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG -n default'
-            }
-        }
-    }
-}
-
+  dockerAgent    : 'built-in',     // where Docker works
+  deployAgent    : 'built-in',  // where kubectl works
+  clusterName    : 'YOUR-EKS-CLUSTER-NAME' // optional: auto-kubeconfig
+)
